--- a/pom.xml
+++ b/pom.xml
@@ -15,25 +15,20 @@
 		<snapshotRepository>
 			<id>nexus</id>
 			<name>Nexus</name>
-			<url>https://nexus-cicd.apps.ocp.datr.eu/repository/maven-snapshots</url>
+			<url>http://nexus3.cicd.svc:8081/repository/maven-snapshots</url>
 		</snapshotRepository>
 		<repository>
 			<id>nexus</id>
 			<name>Nexus</name>
-			<url>https://nexus-cicd.apps.ocp.datr.eu/repository/maven-release</url>
+			<url>http://nexus3.cicd.svc:8081/repository/maven-release</url>
 		</repository>
 	</distributionManagement>
 
 	<properties>
-		<spring.boot.version>2.0.4.RELEASE</spring.boot.version>
+		<spring.boot.version>2.2.2.RELEASE</spring.boot.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.jnd.microservices</groupId>
-			<artifactId>data-model</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,9 +43,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>io.opentracing.contrib</groupId>
 			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
-			<version>0.2.2</version>
+			<version>1.0.3</version>
 		</dependency>
 
 	</dependencies>
@@ -69,7 +71,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.0.4.RELEASE</version>
+				<version>${spring.boot.version}</version>
 				<executions>
 					<execution>
 						<goals>
