--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,3 +1,6 @@
+apiVersion: 1.0.0
+metadata:
+ generateName: inventory-service-
 projects:
   - name: inventory-service
     source:
@@ -90,4 +93,4 @@ commands:
              }]
            }
         type: vscode-launch
-apiVersion: 1.0.0
+
