--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,8 +1,8 @@
 apiVersion: 1.0.0
 metadata:
- generateName: inventory-service-
+ generateName: inventory-
 projects:
-  - name: inventory-service
+  - name: inventory
     source:
       type: git
       location: "https://github.com/justindav1s/inventory.git"
