--- a/devfile.yaml
+++ b/devfile.yaml
@@ -46,14 +46,14 @@ commands:
     actions:
       - workdir: '${CHE_PROJECTS_ROOT}/inventory'
         type: exec
-        command: 'MAVEN_OPTS="-Xmx200m" && mvn -Duser.home=${HOME} spring-boot:run'
+        command: 'MAVEN_OPTS="-Xmx200m" && mvn -Duser.home=${HOME} -Dspring.profiles.active=v3 spring-boot:run'
         component: maven
   - name: 3. Run in debug mode
     actions:
       - workdir: '${CHE_PROJECTS_ROOT}/inventory'
         type: exec
         command: |-
-          mvn  -Duser.home=${HOME} spring-boot:run -Drun.jvmArguments="-Xdebug
+          mvn  -Duser.home=${HOME} -Dspring.profiles.active=v3 spring-boot:run -Drun.jvmArguments="-Xdebug
            -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005"
         component: maven
   - name: 4. Run tests
